Fixing scroll overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ html {
 }
 body {
     font-family: 'Noto Sans JP';
-    overflow: hidden;
+    overflow-y: hidden;
 }
 .overlay-dark {
     box-shadow: inset 2000px 0 0 0 rgba(0, 0, 0, 0.5);
@@ -55,7 +55,10 @@ body {
     font-size: 1rem;
     box-sizing: border-box;
 }
-/* Pppup Section */
+.wrapper {
+    overflow-x: hidden;
+}
+/* Popup Section */
 .popup {
     width: 100%;
     height: 100%;
